--- a/coolsite/main/templates/main/about.html
+++ b/coolsite/main/templates/main/about.html
@@ -1,10 +1,5 @@
 {% extends 'main/base.html' %} 
 {% block content %} 
 <h1>{{title}}</h1> 
-<p>Содержимое о сайте</p> 
-{% if user.is_authenticated %} 
-<p>User</p> 
-{% else %} 
-<p>Not auth</p> 
-{% endif %} 
+<p> это образовательная площадка подготовки руководителей высшего уровня на казахстанских и международных программах МВА, Executive MBA, DBA и Executive Education programs. Программы МВА ВШБ имеют самую престижную аккредитацию в сфере МВА программ - АМВА (Association of MBA's, Великобритания), лицензию Министерства Образования и Науки РК, и ряд других международных, региональных аккредитаций, что ставит Высшую Школу Бизнеса  AlmaU в один ряд с лучшими бизнес-школами мира.</p> 
 {% endblock %}
