--- a/coolsite/main/templates/main/base.html
+++ b/coolsite/main/templates/main/base.html
@@ -18,10 +18,10 @@
 <body>
   <div class="top-header">
     {% if user.is_authenticated %} 
-    <a href="{% url 'main-logout' %}"><p>{{user.username}}</p></a>
-    <a href="{% url 'main-logout' %}">Выйти</a>
+    <a href="{% url 'main-logout' %}"><h6>{{user.first_name}} {{user.last_name}}</h6></a>
+    <a href="{% url 'main-logout' %}"><h6>Выйти</h6></a>
     {% else %} 
-    <a href="{% url 'main-login' %}">Вход</a>
+    <a href="{% url 'main-login' %}"><h6>Авторизоваться</h6></a>
     {% endif %}       
   </div>
 
@@ -32,14 +32,14 @@
         <ul>
             <li><a href="{% url 'main-index' %}">Главная</a></li>
             <li><a href="{% url 'main-about' %}">О Нас</a></li>
-            {% if user.is_authenticated %} 
-            <li><a href="{% url 'main-addrequest' %}">Добавить заявку</a></li>
+            {% if user.is_authenticated %}
             <li><a href="{% url 'main-mylessons' %}">Мои Занятия</a></li>
-            <li><a href="{% url 'main-requests' %}">Заявки</a></li>
+            <li><a href="{% url 'main-addrequest' %}">Подать заявку</a></li>
+            <li><a href="{% url 'main-requests' %}">Мои Заявки</a></li>
             {% endif %}
-            <li><a href="#">Курсы</a></li>
+            <li><a href="{% url 'main-coach' %}">Преподаватели</a></li>
+            <li><a href="{% url 'main-disciplines' %}">Дисциплины</a></li>
             <li><a href="{% url 'main-lesson' %}">Занятия</a></li>
-
         </ul>
       </nav>
 
