--- a/coolsite/main/templates/main/base.html
+++ b/coolsite/main/templates/main/base.html
@@ -37,7 +37,7 @@
             <li><a href="{% url 'main-addrequest' %}">Подать заявку</a></li>
             <li><a href="{% url 'main-requests' %}">Мои Заявки</a></li>
             {% endif %}
-            <li><a href="{% url 'main-coach' %}">Преподаватели</a></li>
+            <li><a href="{% url 'main-coach' %}">Тренера</a></li>
             <li><a href="{% url 'main-disciplines' %}">Дисциплины</a></li>
             <li><a href="{% url 'main-lesson' %}">Занятия</a></li>
         </ul>
