--- a/coolsite/main/templates/main/coach.html
+++ b/coolsite/main/templates/main/coach.html
@@ -1,13 +1,13 @@
 {% extends 'main/base.html' %}
 {% block content%}
 
-<h1>Преподаватели</h1>
+<h1>Тренера</h1>
 <h6>  </h6>
 
 <table class="table table-striped">
     <tr>
         <th>Преподаватель</th>
-        <th>Информация о Преподавателе</th>
+        <th>Информация о тренере</th>
     </tr>
 
     {% for row in data %}
